--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,23 +1,12 @@
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
-  page: true
-  socials:
-    x: yangshunz
-    github: yangshun
-
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
+scarlet:
+  name: Scarlet Victoria Rose
+  title: Desenvolvedora de software
   url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
+  image_url: /img/scarlet-face.png
   page:
     # customize the url of the author page at /blog/authors/<permalink>
-    permalink: '/all-sebastien-lorber-articles'
+    permalink: "/scarlet"
   socials:
-    x: sebastienlorber
-    linkedin: sebastienlorber
-    github: slorber
-    newsletter: https://thisweekinreact.com
+    linkedin: scarletrose
+    github: scarletquasar
+    newsletter: https://scarletrose.xyz
